# prospectus-lumos

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: code_style.yml  tests.yml
libraries/google_cloud/: backends.py
libraries/storages/: backends.py  tuples.py  utils.py
placeholder/: asgi.py  local_settings.ci.py  settings.py  wsgi.py
placeholder/core/: db_router.py
prospectus_lumos/: settings.py  urls.py
prospectus_lumos/accounts/: models.py
prospectus_lumos/api/: authentication.py  parser.py  permissions.py  urls.py  utils.py  views.py
prospectus_lumos/apps/accounts/: admin.py  models.py
prospectus_lumos/apps/ai_analysis/: admin.py  models.py  services.py
prospectus_lumos/apps/api/: response.py
prospectus_lumos/apps/documents/: models.py
prospectus_lumos/core/: constants.py  utils.py
prospectus_lumos/documents/: admin.py
prospectus_lumos/expenses/: admin.py  models.py  services.py  views.py
prospectus_lumos/website/: urls.py
static_files/css/: theme.css
static_files/js/: loading-indicator.js
templates/: base.html
templates/accounts/: google_credentials.html  source_form.html  source_list.html
templates/ai_analysis/: expense.html  income.html  portfolio.html  settings.html
templates/expenses/: category_analyzer.html  dashboard.html  document_detail.html  document_list.html  expense_analyzer.html  income_analyzer.html  login.html  portfolio_analyzer.html
templates/partials/: loading_indicator.html
tests/: test_ai_analysis.py  test_expenses.py
(+20 files in other folders)
