[project]
name = "Prospectus Lumos"
readme = "README.md"

[tool.ruff]
lint.select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings
]

lint.ignore = [
    "C901",  # function is too complex
    "B009",  # `getattr` with constant value
    "B010",  # `setattr` with constant value
    "B904",  # `raise` with `None` value
]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    ".yml",
    ".txt",
    ".html",
    ".js",
    ".css",
    ".json",
    "node_modules",
    "migrations",
    "settings.py"
]

# set max line length
line-length = 120

# Assume Python 3.13.
target-version = "py313"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict_optional = false

[[tool.mypy.overrides]]
module = [
  "*.migrations.*",
  "prospectus_lumos.settings"
]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "prospectus_lumos.settings"

[tool.isort]
include_trailing_comma = true
line_length = 120
known_django = ["django"]
sections = [
  "FUTURE",
  "STDLIB",
  "THIRDPARTY",
  "DJANGO",
  "FIRSTPARTY",
  "LOCALFOLDER"
]
